dont, forget outline for border on hover

--- a/index.css
+++ b/index.css
@@ -1,9 +1,65 @@
-
 :root {
    --color-primary: #FF78AE;
+   --clr-secondary: #54595F;
+   --clr-gray-slof: #d3d7db;
 }
 
-*{
+/*
+  Josh's Custom CSS Reset
+  https://www.joshwcomeau.com/css/custom-css-reset/
+*/
+*,
+*::before,
+*::after {
+   box-sizing: border-box;
+}
+
+* {
+   margin: 0;
+}
+
+html,
+body {
+   height: 100%;
+}
+
+body {
+   line-height: 1.5;
+   -webkit-font-smoothing: antialiased;
+}
+
+img,
+picture,
+video,
+canvas,
+svg {
+   display: block;
+   max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+   font: inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+   overflow-wrap: break-word;
+}
+
+#root,
+#__next {
+   isolation: isolate;
+}
+
+* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
@@ -15,18 +71,8 @@ a {
    display: inline-block;
 }
 
-span {
-   display: inline-block;
-   height: fit-content;
-}
-
 ul {
    list-style-type: none;
-}
-
-.container {
-   max-width: 90vw;
-   margin: 0 auto;
 }
 
 img {
@@ -34,22 +80,128 @@ img {
    height: auto;
 }
 
+.container {
+   max-width: 90vw;
+   margin: 0 auto;
+}
+
+.container-fluid {
+   max-width: 100vw;
+}
+
+/* ------ navbar ------ */
+
+/* >>>>>> top nav <<<<<< */
+
+.nav {
+   border-bottom: 1px solid var(--clr-gray-slof);
+   font-size: 14px;
+}
+
 .top-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
+   padding: 10px 0;
+   color: var(--clr-secondary);
 }
 
-.top-nav section {
+.nav-menu {
+   display: flex;
+}
+
+/* >>>>>> left nav <<<<<< */
+
+.left-nav {
    display: flex;
    align-items: center;
 }
 
-.location ul {
+.links {
+   gap: 1.5rem;
+}
+
+.icons {
+   padding: 20px 20px;
+   margin-left: 30px;
+   border-left: 1px solid var(--clr-gray-slof);
+   gap: 1.25rem;
+}
+
+.icons a span {
+   display: flex;
+}
+
+.icons a span i::before {
+   font-size: 18px;
+}
+
+
+/* >>>>>> left nav <<<<<< */
+
+
+/* >>>>>> rigth nav <<<<<< */
+
+.location {
+   display: flex;
+   align-items: flex-start;
+   height: 50px;
+}
+
+.location-list {
    display: flex;
    align-items: center;
+}
+
+.location-list li {
+   padding: 5px 20px;
+}
+
+.location-list li:last-child {
+   border-left: 1px solid var(--clr-gray-slof);
+}
+
+.location-list li a {
+   display: flex;
+   align-items: center;
+}
+
+/* >>>>>> rigth nav <<<<<< */
+
+/* >>>>>> top nav <<<<<< */
+
+/* >>>>>> main nav <<<<<< */
+
+.navbar {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+}
+
+.mcu-logo {
+   width: 100px;
+}
+
+.nav-list-menu {
+   height: max-content;
+   display: flex;
+}
+
+.nav-list-menu li {
+   display: flex;
+   align-items: center;
+   padding: 50px 20px;
+}
+
+.nav-list-menu li:hover {
+   outline: none;
 }
 
 .so-icon {
    color: var(--color-primary);
 }
+
+
+/* >>>>>> main nav <<<<<< */
+
+/* ------ navbar ------ */
